[workspace]
resolver = "3"
members = [
    "myapp",
    "mylib1",
    "thread-spawn",
    "async-listener-demo",
    "async-messaging",
    "async-demo",
    "trait-demo"
]

[workspace.dependencies]
cc = "1.0"
rand = "0.9"
regex = { version = "1.11", default-features = false, features = ["std"] }


