[workspace]
resolver = "3"
members = [
    "myapp",
    "mylib1",
    "thread-spawn",
    "async-listener-demo",
    "thread-messaging",
    "async-demo",
    "trait-demo",
    "async-tokio-select"
,
    "serde-json"
,
    "async-messaging"
]

[workspace.dependencies]
cc = "1.0"
rand = "0.9"
regex = { version = "1.11", default-features = false, features = ["std"] }


